crates/ink/tests/ui/event/fail/cfg_attr_on_field.rs
#[ink::event]
pub struct Event {
    #[cfg(feature = "std")]
    pub a: [u8; 32],
}

fn main() {}