crates/ink/tests/ui/event/fail/cfg_attr_on_field.stderr
error: conditional compilation is not allowed for event fields
 --> tests/ui/event/fail/cfg_attr_on_field.rs:3:5
  |
3 |     #[cfg(feature = "std")]
  |     ^
